--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -137,6 +137,62 @@ http://www.bootstrapzero.com
          url('../fonts/franklin/FranklinGothic-MediumCond.svg#FranklinGothic-MediumCond') format('svg');
 }
 
+
+.btnprimary1 {
+    background: rgba(0, 0, 0, 0) none repeat scroll center top;
+    border: medium none;
+    font-size: 22px;
+}
+
+
+/*.year_01 .selectpicker {
+    background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
+    border: medium none;
+}
+
+.selectpicker option {
+    background: #fff none repeat scroll 0 0;
+    border: medium none !important;
+    border-radius: 0 !important;
+    color: #000;
+    font-size: 18px;
+    font-weight: normal;
+    padding: 6px 4px;
+    text-align: center;
+}*/
+
+
+ .year_01 .dropdown-menu {
+    border-radius: 2px !important;
+    margin: 0;
+    max-height: 120px;
+    min-width: 49px !important;
+    overflow-x: hidden;
+}
+
+.year_01 .dropdown-menu > li > a{ color: #000 !important;     padding: 15px 20px;}
+
+.year_01 .dropdown-menu > li > a:focus, .dropdown-menu > li > a:hover {
+    clear: both;
+    color: #000 !important;
+    display: block;
+    font-weight: 600;
+    line-height: 1.42857;
+    white-space: nowrap;
+     background-color:#ddd!important;
+}
+
+
+.year_01 .dropdown-menu > li > a {
+    clear: both;
+    color: #000 !important;
+    display: block;
+    font-weight: 600;
+    line-height: 1.42857;
+    padding: 15px 20px;
+    white-space: nowrap;
+}
+
 button#popup {
     background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
     border: medium none;
@@ -576,7 +632,7 @@ p {
     padding: 12px;
 }
 .container-fluid.tab {
-    padding: 0 0 75px 5px;
+    padding: 70px 0 75px 5px;
 }
 .faa-spin {
     animation: 1.5s linear 0s normal none infinite running spin;
@@ -1486,7 +1542,7 @@ background: #fff none repeat scroll 0 0;
   text-align: center;
   float: left;
   margin-bottom: -1px;
-  margin-right: 7px;
+  margin-right: 0px;
 }
 .nav-tabs > li:last-child {
     margin-right: 0;
@@ -2304,6 +2360,37 @@ img.nav-pic{ height: 40px; width: 40px; }
 
 @media (max-width: 770px){
 
+
+.navbar-default .nav > li.active>a{
+    color: #027fff !important;
+    border-bottom: 2px solid #027fff!important;
+}
+
+
+
+
+
+
+.rank_mobile a.btn.rank-btn {
+    padding: 15px 31px;
+    height: auto!important;
+}
+
+/*
+
+.mobile_scroll {
+    max-height: 100%;
+    overflow-y: auto;
+    border-radius: 5px;
+    background: #9f9f9f;
+    min-height: 532px;
+}*/
+
+.rank_mobile {
+    height: 50px;
+}
+
+
 .panel{display: none;}
 .rank li:nth-child(2) {
     width: 57%;
@@ -2330,10 +2417,9 @@ img.nav-pic{ height: 40px; width: 40px; }
 .year {
     color: #ffffff;
     float: left;
-    font-size: 20px;
-    margin-right: 24px;
-    padding-left: 2%;
-    margin-top: 6px;
+    font-size: 18px;
+    margin-right: 13px;
+    margin-top: 11px;
 }
 .rank_img img {
     border-radius: 50%;
@@ -2437,12 +2523,14 @@ img.nav-pic{ height: 40px; width: 40px; }
 }
 
 @media (max-width: 667px){
-    .nav-tabs > li {
-      float: left;
-      margin-bottom: -1px;
-      text-align: center;
-      width: auto;
-  }
+
+
+.nav-tabs > li {
+    float: left;
+    margin-bottom: 0;
+    text-align: center;
+    width: auto;
+}
     .navbar-default {border-color: transparent;background-color: #fff;min-height: 60px;}
     .navbar-header > .navbar-brand {color: rgba(255,255,255,0.7);padding: 19px;}
     .navbar-default .navbar-header .navbar-brand:hover,
@@ -2547,13 +2635,13 @@ li.rank-li2.rank-li2Mobile {
      box-shadow: none;
      border:none;
 }
-.mobile_scroll {
+/*.mobile_scroll {
     max-height: 300px;
     overflow-y: auto;
     border-radius:5px;
     background:#9f9f9f;
     
-}
+}*/
 
 
 }
@@ -2669,13 +2757,13 @@ li.rank-li2.rank-li2Mobile {
      box-shadow: none;
      border:none;
 }
-.mobile_scroll {
+/*.mobile_scroll {
     max-height: 300px;
     overflow-y: auto;
     border-radius:5px;
     background:#9f9f9f;
     
-}
+}*/
 
 
 
@@ -2683,6 +2771,21 @@ li.rank-li2.rank-li2Mobile {
 
 
 @media (max-width: 480px){
+.rank h4 {
+
+    margin: 20px 0 0;
+}
+
+.rank-number {
+    top: 16px;
+}
+
+.add_plus .last label.menu-open-button {
+    top: 21px;
+}
+
+
+
 .newClass{overflow: scroll;}
  #mobile-nav {
     cursor: pointer;
@@ -2703,12 +2806,12 @@ li.rank-li2.rank-li2Mobile {
     float: left;
     font-size: 18px;
     margin-right: 13px;
-    margin-top: 5px;
+    margin-top: 11px;
 }
 .navbar.bg-blue {
     background: #0080ff none repeat scroll 0 0 !important;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-    height: auto;
+/*    height: auto;*/
     position: fixed;
 }
 
@@ -2717,11 +2820,11 @@ li.rank-li2.rank-li2Mobile {
     width: 100%;
 }
 .rank-btn {
-   font-size: 12px;
-    line-height: 18px;
-    margin-top: 7px;
+    font-size: 12px;
+    line-height: normal;
+    margin-top: 0;
     max-width: 100%;
-    padding: 9px 26px 9px 30px;
+    padding: 20px 26px 9px 30px;
     text-align: left;
     width: 100%;
 }
@@ -2856,7 +2959,12 @@ body{overflow: scroll;}
     display: block;
     width: 100%;
 }
-.heading_text h2{ font-size: 16px; }
+
+.heading_text h2{
+    margin-top: 21px;
+    font-size: 13px;
+}
+
   .nav-tabs > li > a {
   font-size: 11px !important;
   padding: 12px 11px !important;
@@ -2865,9 +2973,16 @@ body{overflow: scroll;}
   color: #000 !important;
 
 }
+
+
+
 .panel-default > .panel-heading{ margin-right: 5px; }
 .paddingheader {padding: 0px;}
-.col-md-5.pull-right {background: #f8f7f5;padding: 0px 26px;}
+.col-md-5.pull-right {
+    background: #f8f7f5;
+    padding: 5px;
+    width: 100%;
+}
 .paddingheader {padding: 0px;}
 .col-md-5.pull-right {background: #f8f7f5;padding: 0px 26px;}
 ul.nav.nav-tabs{ background: none; }
@@ -2933,13 +3048,13 @@ li.rank-li2.rank-li2Mobile {
      box-shadow: none;
      border:none;
 }
-.mobile_scroll {
-    max-height: 300px;
+/*.mobile_scroll {
+    max-height: 100%;
     overflow-y: auto;
     border-radius:5px;
     background:#9f9f9f;
     
-}
+}*/
 .rank li:nth-child(2){ width:70%;}
 .Active{
     background: #5f5f5f; color: #fff;
@@ -3047,7 +3162,8 @@ ul.nav.nav-tabs{ border: none; }
     margin-bottom: 0px;
     border-right: none;
     border-top: none;
-        height: 50px;
+    height: auto;
+}       height: 50px;
 }
 .rankPopup.modal-body
 {
@@ -3070,7 +3186,7 @@ li.rank-li2.rank-li2Mobile {
     height: 18px !important;
     padding: -3px !important;
     font-size: 10px;
-    top: 16px;
+    top: 7px;
 }
 .modal-dialog {
     top: 27%;
@@ -3095,14 +3211,14 @@ li.rank-li2.rank-li2Mobile {
      border:none;
 }
 .mobile_scroll {
-    max-height: 300px;
+    /*max-height: 300px;*/
     overflow-y: auto;
     border-radius:5px;
     background:#9f9f9f;
     
 }
 .rank li:nth-child(2) {
-  width: 78%;
+    width: 72%;
 }
 .Active{
     background: #5f5f5f; color: #fff;
@@ -3357,7 +3473,7 @@ li.rank-li2.rank-li2Mobile {
 
 .spc_bx {
     background: #f9f7f5 none repeat scroll 0 0;
-    margin-top: 69px;
+    margin-top: 77;
     width: 100%;
 }
 .fixedTable .table {
