--- a/app/index.ejs
+++ b/app/index.ejs
@@ -45,15 +45,13 @@
   <div id="mount">
     <%- reactOutput %>
   </div>
-
-  
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bluebird/3.3.5/bluebird.min.js"></script>
   <script src="static/app.js"></script>
   <script src="/static/js/jquery.min.js"></script>
   <script src="/static/js/bootstrap.min.js"></script>
   <script src="/static/js/jquery.easing.min.js"></script>
   <script src="/static/js/wow.js"></script>
   <script src="/static/js/scripts.js"></script>
-  
 </body>
 
 </html>
