--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -212,16 +212,16 @@ button#popup:focus {
 }
 
 .menu-item, .menu-open-button {
-    background: #80aceb none repeat scroll 0 0;
+    background: #80aceb;
     border-radius: 100%;
     color: white;
-    height: 26px;
+    height: 18px;
     line-height: 20px;
-    margin-left: -18px;
+    margin-left: -12px;
     position: absolute;
     text-align: center;
     top: 18px;
-    width: 24px;
+    width: 18px;
     z-index: 1;
   -webkit-transform: translate3d(0, 0, 0);
           transform: translate3d(0, 0, 0);
@@ -383,6 +383,11 @@ label.menu-open-button {
 .menu-open:checked ~ .menu-item img {
     width: 18px;
 }
+
+.add_plus .menu-open:checked ~ .menu-item{position: fixed; top:15px!important;}
+
+
+
 .menu-open:checked ~ .menu-item {
   -webkit-transition-timing-function: cubic-bezier(0.935, 0, 0.34, 1.33);
           transition-timing-function: cubic-bezier(0.935, 0, 0.34, 1.33);
@@ -393,8 +398,17 @@ label.menu-open-button {
        margin-left: -33px;
        display: inline-table;
        z-index: 2;
+       top:20px!important;
 
 }
+
+.close img {
+	zoom: 1;
+	filter: alpha(opacity=50);
+	opacity: 0.5;
+}
+
+
 .menu-open:checked ~ .menu-item:nth-child(3) {
     -webkit-transition-duration: 180ms;
     transition-duration: 180ms;
@@ -412,6 +426,8 @@ label.menu-open-button {
     transition-duration: 380ms;
     -webkit-transform: translate3d(-27.053px, 45.476px, 0px);
     transform: translate3d(-44.053px, 54.476px, 0px);
+    background:#80aceb!important;
+    opacity:9!important;
 }
 .menu-open:checked ~ .menu-item:nth-child(6) {
     -webkit-transition-duration: 480ms;
@@ -1719,8 +1735,8 @@ ul.nav.nav-tabs {
 }
 
 .plus img {
-    margin-top: 18px;
-    margin-right: -11px;
+    margin-top: 21px;
+    margin-right: -15px;
 }
 
 .rank_percentage {
@@ -2101,7 +2117,8 @@ header .header-content .social_icon p {
     margin-right: 15px;
 }
 .add_plus .last label.menu-open-button {
-    top: 25px;
+    top: 24px;
+    margin-left: -19px;
 }
 
 .fixedTable-sidebar {
@@ -2631,7 +2648,7 @@ li.rank-li2.rank-li2Mobile {
      }
 
 .modal-dialog {
-    margin-top: 17px;
+    margin-top: -67px;
 }
 .modal-content{
      box-shadow: none;
@@ -3752,6 +3769,7 @@ li.rank-li2.rank-li2Mobile {
 .add_plus .last .menu-open:checked ~ .menu-item:nth-child(5) {
      -webkit-transform: translate3d(-27.053px, 45.476px, 0px);
      transform: translate3d(-44.053px, 70px, 0px);
+     background:
 }
 .add_plus .last .menu-open:checked ~ .menu-item:nth-child(6) {
      -webkit-transform: translate3d(17.084px, 34px, 0px);
@@ -4023,3 +4041,39 @@ li.rank-li2.rank-li2Mobile {
 
 }
 /*---------320px media queries finish here--------*/
+
+@media all and (-ms-high-contrast: none),
+(-ms-high-contrast: active) {
+.menu-open:checked ~ .menu-item {
+  -webkit-transition-timing-function: cubic-bezier(0.935, 0, 0.34, 1.33);
+          transition-timing-function: cubic-bezier(0.935, 0, 0.34, 1.33);
+        height: 30px;
+        width: 30px;
+        position: fixed;
+        line-height: 26px;
+       margin-left: -22px;
+       display: inline-table;
+       z-index: 2;
+       top:100px!important;
+
+}
+
+.add_plus .menu-open:checked ~ .menu-item {
+       margin-left: -33px;
+
+
+}
+
+
+.plus img {
+    margin-top: 21px;
+    margin-right: -30px;
+}
+
+.menu-item, .menu-open-button{
+	margin-left:-4px;
+	width:10px;
+}
+
+
+}
