--- a/app/index.ejs
+++ b/app/index.ejs
@@ -35,6 +35,11 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/static/images/fav/favicon-16x16.png">
   
   <link rel="manifest" href="/static/images/fav/manifest.json">
+
+<!--[if IE]>
+  <link rel="stylesheet" type="text/css" href="/static/css/ie-styles.css" />
+<![endif]-->
+
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="/static/images/fav/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
