--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -312,7 +312,10 @@ label.menu-open-button {
   -webkit-transform: translate3d(0, 0, 0) rotate(-45deg);
           transform: translate3d(0, 0, 0) rotate(-45deg);
 }
-
+#glanceBody .col-md-5 {
+margin:0 auto !important;
+float: none !important;
+}
 .menu {
   position: absolute;
   left: 50%;
@@ -2660,62 +2663,51 @@ img.nav-pic{ height: 40px; width: 40px; }
     .grid_wrap {padding-bottom: 80px;}
     .logo_img{ float: none; }
 
- .banner_nav {
-    top: auto !important;
-    bottom: 260px;
-    width: 100%;
-}
-
 
 }
 
 @media (max-width: 667px){
+  .banner_nav ul li a{
+    padding: 15px 15px !important;
+    border-radius: 50% !important;
+  }
 .banner_nav{
   top: 9% !important;
 }
 .social_icon {
     width: 57% !important; 
-   
+    margin-bottom:0 !important;
 }
 .number_list, .taketourwrap{display: none;}
 .grid_wrap .grid_1{
   min-height: auto!important;
   border-radius: 90px 90px 90px 90px;  
   padding: 10px;
-    margin-top: 30px;
+ margin: 0 !important;
 }
 
-.gridcircle_2 , .gridcircle_3{    background: #f3f3f3;
-    border-radius: 50%;
-    height: 111px;
-    /* margin: 0 auto; */
-    padding: 27px;
-    width: 111px;
-    float: left;
-    margin-top: 7px;
-    margin-top: 19px;
-  }
+
   .social_icon > ul li{
         padding: 2px 4px;
   }
-.btn-xl{ background: transparent; }
-
-.gridcircle_1 {
+.btn-xl{ background: transparent;    margin-top: 8px; }
+header .header-content .inner p{margin: 0 auto 13px ;}
+.gridcircle_1 ,.gridcircle_2 , .gridcircle_3{
     background: #f3f3f3;
     border-radius: 50%;
-    height: 111px;
+    height: 100px;
     /* margin: 0 auto; */
-    padding: 27px;
-    width: 111px;
+    padding: 26px;
+    width: 100px;
     float: left;
     margin-top: 7px;
-        margin-top: 19px;
+    margin-top: 0;
 }
-
+.social_icon p{margin: 8px auto 0 !important; }
 .grid_wrap a {
     float: left;
     width: 100%;
-    margin: 0 0 20px 0!important;
+    margin: 0 0 10px 0!important;
 }
 
 .grid_wrap a:nth-child(2) {
@@ -3160,7 +3152,11 @@ body{overflow: scroll;}
     }
     .grid_wrap {
   padding-bottom: 170px;
-}.navbar-default .nav > li > a, .navbar-default .nav > li > a:focus {
+}
+#home .grid_wrap {
+  padding-bottom:250px !important;
+}
+.navbar-default .nav > li > a, .navbar-default .nav > li > a:focus {
     color: #000;
     font-size: 12px;
     font-weight: 200;
@@ -3280,8 +3276,9 @@ li.rank-li2.rank-li2Mobile {
 
 .banner_nav {
     top: auto !important;
-    bottom: 260px;
+    bottom: 340px;
     width: 100%;
+
 }
 
 
